# ProjectQM_ND_2

./: Bead.cpp  Bead.h  BeadInterface.h  CMakeLists.txt  Constants.h  HarmonicOscillator1D.cpp  Morse3D.cpp  Particle.cpp  Particle.h  ParticleInterface.h  ProductInteraction.cpp  System.cpp  System.h  Utils.h  main.cpp  readme.txt
Examples/: CoupledHarmonicOscillator.cpp  HarmonicOscillator1D.cpp  Morse3D.cpp  ProductInteraction.cpp  main.cpp
Matlab/: L2_convergence.m  L2_convergence_2D.m  Plots_Coupled_Harmonic_Oscillator.m  Plots_Harmonic_Oscillator.m  Plots_Morse_3D.m  Plots_Presentation.m  Plots_Product_Interaction.m
Presentation/: DoubleWellPotential.cpp  HarmonicPotential.cpp
